[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "OpenEnv customer support simulation"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_module = "env.environment:CustomerSupportEnv"
